# ComputerGraphic_lab2

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CelestialBody.cpp  CelestialBody.h  FollowCamera.cpp  FollowCamera.h  Grid.cpp  Grid.h  Ground.cpp  Ground.h  Logger.h  ModelLoader.cpp  ModelLoader.h  Render.cpp  Render.h  Window.cpp  Window.h  main.cpp  shader.hlsl
Shaders/: PixelShader.hlsl  Shader.hlsl
cmake/modules/: FindStb.cmake
